# github_actions_gtest_example

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  github_actions_gtest_example.cpp  github_actions_gtest_example.h  info.cpp
test/: CMakeLists.txt  hello_test.cc
